--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -6,6 +6,9 @@
 
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{ site.baseurl_root }}/assets/stylesheets/main.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
   {% for lang in site.languages %}
     {% if lang == site.default_lang %}
